debug doBackup method